CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

MESSAGE(STATUS "CREATE RDO_REPOSITORY LIBRARY PROJECT")

# Find Boost
SET(Boost_USE_STATIC_LIBS   ON)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost COMPONENTS system filesystem thread REQUIRED)

# Find Boost
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(HEADER_FILES	
	rdorepository.h)

SET(SOURCE_FILES
	rdorepository.cpp)

SOURCE_GROUP(".repository" FILES 
	rdorepository.h
	rdorepository.cpp)

ADD_LIBRARY(rdo_nix_repository ${HEADER_FILES} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(rdo_nix_repository ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY})