SET(RDO_CONVERTER_PATH rdo_converter)
SET(RDO_CORBA_PATH rdo_corba)
SET(RDO_MBUILDER_PATH rdo_mbuilder)
SET(RDO_PARSER_PATH rdo_parser)
SET(RDO_RUNTIME_PATH rdo_runtime)
SET(RDO_SIMULATOR_PATH rdo_simulator)

#ADD_SUBDIRECTORY(${RDO_CONVERTER_PATH})
#ADD_SUBDIRECTORY(${RDO_CORBA_PATH})
#ADD_SUBDIRECTORY(${RDO_MBUILDER_PATH})
ADD_SUBDIRECTORY(${RDO_PARSER_PATH})
#ADD_SUBDIRECTORY(${RDO_RUNTIME_PATH})
#ADD_SUBDIRECTORY(${RDO_SIMULATOR_PATH})
