#==============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================

ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(mbuilder)
ADD_SUBDIRECTORY(procgui)
