CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(rdo_common_test)

MESSAGE(STATUS "CREATE TEST FOR RDO COMMON")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${RDO_BASE_DIRECTORY})

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config-tiles.h.cmake ${CMAKE_CURRENT_SOURCE_DIR}/config-tiles.h) ### WRONG PLACE???

SET(HEADER_FILES
	config-tiles.h)

SET(SOURCE_FILES
	main.cpp)

FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(test_rdo_common ${SOURCE_FILES} ${HEADER_FILES})
ADD_DEPENDENCIES(test_rdo_common rdo_nix_common)

TARGET_LINK_LIBRARIES(test_rdo_common rdo_nix_common)
TARGET_LINK_LIBRARIES(test_rdo_common ${Boost_LIBRARIES})