CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

PROJECT(rdo_common_test)

MESSAGE(STATUS "CREATE TEST FOR RDO COMMON")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${RDO_BASE_DIRECTORY})

SET(SOURCE_FILES
	main.cpp)

SET(RESOURCE_FILES
#	resource_test.aps
	resource_test.rc)

SOURCE_GROUP(".resource" FILES 
	${RESOURCE_FILES})

SOURCE_GROUP(".test" FILES 
	${HEADER_FILES}
	${SOURCE_FILES})

FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(test_rdo_common ${SOURCE_FILES} ${RESOURCE_FILES})
ADD_TEST(NAME test_rdo_common COMMAND ${EXECUTABLE_OUTPUT_PATH}/test_rdo_common)
ADD_DEPENDENCIES(test_rdo_common rdo_nix_common)

IF(MSVC)
	SET_TARGET_PROPERTIES(test_rdo_common PROPERTIES COMPILE_FLAGS "/EHa")
ENDIF()

TARGET_LINK_LIBRARIES(test_rdo_common rdo_nix_common)
TARGET_LINK_LIBRARIES(test_rdo_common ${Boost_LIBRARIES})